--- a/configs/Makefile
+++ b/configs/Makefile
@@ -1,4 +1,5 @@
 preprocess:
 	poetry run python src/data_processing/preprocess.py
 
-train: poetry run python src/models/train_card2vec.py
+train: 
+	poetry run python src/models/train_card2vec.py
