--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.13"
 dependencies = [
     "dvc (>=3.64.1,<4.0.0)",
     "pandas (>=2.3.3,<3.0.0)",
-    "mlflow (>=3.7.0,<4.0.0)"
+    "mlflow (>=3.7.0,<4.0.0)",
+    "gensim (>=4.4.0,<5.0.0)"
 ]
 
 
