--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "dvc (>=3.64.1,<4.0.0)",
     "pandas (>=2.3.3,<3.0.0)",
     "mlflow (>=3.7.0,<4.0.0)",
-    "gensim (>=4.4.0,<5.0.0)"
+    "gensim (>=4.4.0,<5.0.0)",
+    "plotly (>=6.5.0,<7.0.0)",
+    "nbformat (>=5.10.4,<6.0.0)"
 ]
 
 
