--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "plotly (>=6.5.0,<7.0.0)",
     "nbformat (>=5.10.4,<6.0.0)",
     "umap-learn (>=0.5.9.post2,<0.6.0)",
-    "seaborn (>=0.13.2,<0.14.0)"
+    "seaborn (>=0.13.2,<0.14.0)",
+    "dash (>=3.3.0,<4.0.0)"
 ]
 
 
