--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,12 @@ __marimo__/
 
 # Node.js
 node_modules/
+
+# Ignorer données
+runs/*
+!runs/.gitkeep
+data/raw/*
+!data/raw/.gitkeep
+
+data/processed/*
+!data/processed/.gitkeep
